Added icon and updated the post on soft-serve.

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -47,11 +47,11 @@ recent_posts_limits: 5
 # Miscellaneous
 google_analytics:
 gauges_analytics:
-favicon: /favicon.png
+favicon: /favicon.ico
 twitter:
 fb_admins:
 fb_app_id:
-
+    
 # valine comment system. https://valine.js.org
 valine:
   enable: false # if you want use valine,please set this value is true
