--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,12 @@ deploy:
 # Atom feed
 feed:
   enable: true
-  type: atom
-  path: atom.xml
+  type:
+    - atom
+    - rss2
+  path:
+    - atom.xml
+    - rss2.xml
   limit: 20
   hub:
   content:
